# WebtronicsTask

./: Makefile  README.md  docker-compose-dev.yaml  environ.py  pyproject.toml  requirements.txt
app/: main.py  oauth2.py  redis_conn.py  schemas.py  utils.py
app/db/: models.py  session.py
app/repositories/: base.py  posts.py  user.py
app/routers/: auth.py  posts.py  users.py
migrations/: env.py
migrations/versions/: 24cbdd855217_initial_revision.py  2773792c6942_vote_table_added.py
